--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,8 @@
 
+
 logging.pattern.console = %C{1.} [%-5level] %d{HH:mm:ss} -%msg%n
 
 management.endpoint.gateway.enabled=true
 management.endpoints.web.exposure.include=*
+server.error.include-message=always
+
