--- a/application-users.properties
+++ b/application-users.properties
@@ -1,4 +1,4 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/planner_users
+spring.datasource.url=jdbc:postgresql://localhost:5432/project_users
 spring.datasource.username=postgres
 spring.datasource.password=rootroot
