--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,14 @@
 
 
-logging.pattern.console = %C{1.} [%-5level] %d{HH:mm:ss} -%msg%n
 
+
+# более короткое отображение логов
+logging.pattern.console=%C{1.} [%-5level] %d{HH:mm:ss} - %msg%n
+
+# включаем actuator
 management.endpoint.gateway.enabled=true
+# какие endpoints хотим включить
 management.endpoints.web.exposure.include=*
-server.error.include-message=always
 
+# чтобы всегда добавлялся текст ошибки в Response
+server.error.include-message=always
